--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid " alt=""> CodeIN Community</a>       
+          <a href="index.html" class="navbar-brand"> <img src="./assets/img/logo.png" class="logo img-fluid " alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
@@ -759,8 +759,12 @@
 
 
       <section class="events" id="events">
+        <div class="section-header text-center">
+          <h1 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our <span> Events</span></h1>
+          <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+        </div>
 
-        <h1 class="heading"> Our  <span> Events </span> </h1>
+        
   
        <div class="box-container">
   
