--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -82,7 +82,7 @@
               <div class="contents">
                
                 <h2 class="head-title">CodeIN Community </h2>
-                <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps to learn different technologies. We organize events on different technologies.</p>
+                <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and Workshops on different technologies.</p>
                 <div class="header-button">
                   <a href="https://discord.com/invite/hWwbgP4dz9" target="_blank" class="btn btn-common">Join Now</i></a>
                   <a href="#about" class="btn btn-border video-popup">Learn More</i></a>
