--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <div class="contents">
                
                 <h2 class="head-title">CodeIN Community </h2>
-                <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and Workshops on different technologies.</p>
+                <p>CodeIN Community is the Community of Coding Enthusiasts Where we share Resources, Roadmaps and various upcoming opportunities to learn different technologies. We organize various Tech Events, Webinars and Workshops on different technologies. Together We aim to explore the untouched world of technology and tremendous growth-making fields.</p>
                 <div class="header-button">
                   <a href="https://discord.com/invite/hWwbgP4dz9" target="_blank" class="btn btn-common">Join Now</i></a>
                   <a href="#about" class="btn btn-border video-popup">Learn More</i></a>
@@ -199,13 +199,15 @@
             <div class="about-wrapper wow fadeInLeft" data-wow-delay="0.3s">
               <div>
                 <div class="site-heading">
-                  <p class="mb-3">Manage Statistics</p>
-                  <h2 class="section-title">Detailed Statistics of your Community</h2>
+                  <p class="mb-3">Explore opportunities!</p>
+                  <h2 class="section-title">What We offer through the Community</h2>
                 </div>
-                <div class="content">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea maiores, dolorem blanditiis temporibus officiis architecto pariatur placeat sapiente omnis tempore ex officia dolorum expedita dignissimos harum quae consequuntur necessitatibus illum quaerat amet? Quam, sunt reprehenderit.
-                  </p>
+                <div class="content" >
+                   <br>MENTOR'S GUIDE & SUPPORT</br>
+                   <br>SCHEDULED CALLS AND MEETINGS</br> 
+                   <br>PROVIDE LEARNING OPPORTUNITY</br>
+                   <br>ON DEMAND SUPPORT</br> 
+                   <br>HELP EVERYONE TO GROW</br>
                   <a href="#" class="btn btn-common mt-3">Read More</a>
                 </div>
               </div>
