--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
               <div class="icon">
+                <a href="https://discord.com/invite/sqFRzrj7f3">
                 <i class="fab fa-discord"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
+              <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -130,11 +132,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
               <div class="icon">
+                <a href="https://t.me/CodeINCommunity">
                 <i class="fab fa-telegram"></i>
               </div>
               <div class="services-content">
                 <h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
                 <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -142,11 +146,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
               <div class="icon">
+                <a href="https://www.linkedin.com/company/codein-community/mycompany/">
                 <i class="fab fa-linkedin"></i>
               </div>
               <div class="services-content">
                 <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">Linkedin Page</a></h3>
                 <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -154,11 +160,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
               <div class="icon">
+                <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">
                 <i class="fab fa-github"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Open Source Project</a></h3>
+                <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source Project</a></h3>
                 <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -166,11 +174,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
               <div class="icon">
+                <a href="https://twitter.com/CodeinCommunity">
                 <i class="fab fa-twitter"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Twitter</a></h3>
+                <h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
                 <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -178,11 +188,13 @@
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
               <div class="icon">
+                <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw/videos">
                 <i class="fab fa-youtube"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">YouTube Content</a></h3>
+                <h3><a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw/videos">YouTube Content</a></h3>
                 <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              </a>
               </div>
             </div>
           </div>
@@ -1029,7 +1041,7 @@
           <li><a class="telegram" href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a></li> 
           <li><a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="YouTube" href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw" target="_blank"><i class="fab fa-youtube"></i></a></li>
-          <li><a class="twitter" href="https://twitter.com/mesourav44" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a class="twitter" href="https://twitter.com/CodeinCommunity" target="_blank"><i class="fab fa-twitter"></i></a></li>
           
           
         </ul>
