--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </div>
               <div class="services-content">
               <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-              <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+              <p>Join the community on Discord for interaction with students from all over India. </p>
               </a>
               </div>
             </div>
