--- a/index.html
+++ b/index.html
@@ -1034,18 +1034,29 @@
           </div>
         </div>  
       </div>
-      <div class="socials">
-        <ul class="social-icons">
-          <li><a class="linkedin" href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a class="Discord" href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a></li>
-          <li><a class="telegram" href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a></li> 
-          <li><a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="YouTube" href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw" target="_blank"><i class="fab fa-youtube"></i></a></li>
-          <li><a class="twitter" href="https://twitter.com/CodeinCommunity" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          
-          
-        </ul>
-      </div>
+      <ul class="socials">
+        <li>
+            <a href="https://www.linkedin.com/company/codein-community/mycompany/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+        </li>
+        <li>
+            <a href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a>
+        </li>
+        <li>
+            <a href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a>
+        </li>
+        <li>
+            <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i
+                    class="fab fa-github"></i></a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw" target="_blank"><i
+                    class="fab fa-youtube"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/CodeinCommunity" target="_blank"><i class="fab fa-twitter"></i></a>
+        </li>
+    </ul>
     </div> 
       <div id="copyright">
         <div class="container">
