--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                   </div>
                   <div class="info">
                     <h2>Sujana Kamasany</h2>
-                    <h3>Social Media Manager</h3>
+                    <h3>Tech Team</h3>
                   </div>
 
                   <div class="media-icons">
