--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-item">
                   <div class="img-thumb">
-                    <img src="./assets/img/team/Sujana Kamasany.png" alt="">
+                    <img src="./assets/img/team/blank.jpg" alt="">
                   </div>
                   <div class="info">
                     <h2>Sujana Kamasany</h2>
