--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </div>
               <div class="services-content">
               <h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-              <p>Join the community on Discord for interaction with students from all over India. </p>
+              <p> Join the community on Discord for interaction with students from all over the India. </p>
               </a>
               </div>
             </div>
@@ -137,7 +137,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+                <p> Join the Telegram group for all the updates on upcoming opportunities and interaction based on that. </p>
               </a>
               </div>
             </div>
@@ -150,8 +150,8 @@
                 <i class="fab fa-linkedin"></i>
               </div>
               <div class="services-content">
-                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">Linkedin Page</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+                <h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a></h3>
+                <p> Follow the official page of CodeIN community where we posts about all the upcoming workshops and events. </p>
               </a>
               </div>
             </div>
@@ -165,7 +165,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source Project</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+                <p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML, CSS and JavaScript. </p>
               </a>
               </div>
             </div>
@@ -179,7 +179,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+                <p> Follow the official Twitter Page of the CodeIN Community for the updated information. </p>
               </a>
               </div>
             </div>
@@ -193,7 +193,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw/videos">YouTube Content</a></h3>
-                <p>Ut maximus enim dolor. Aenean auctor risus eget tincidunt lobortis. Donec tincidunt bibendum gravida. </p>
+                <p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and Workshops. </p>
               </a>
               </div>
             </div>
