added benefit.html page

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                    <br>PROVIDE LEARNING OPPORTUNITY</br>
                    <br>ON DEMAND SUPPORT</br> 
                    <br>HELP EVERYONE TO GROW</br>
-                  <a href="#" class="btn btn-common mt-3">Read More</a>
+                  <a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Read More</a>
                 </div>
               </div>
             </div>
