--- a/index.html
+++ b/index.html
@@ -832,6 +832,9 @@
   </section>
   
       <!--Events section end-------------------------->
+
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+      <div class="elfsight-app-80250caf-2654-44e8-80a3-213c818bcb95"></div>
   
     
     <!-- Opportunity start -->
