--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
                 </div>
                 <div class="content" >
                    <br>MENTOR'S GUIDE & SUPPORT</br>
-                   <br>SCHEDULED CALLS AND MEETINGS</br> 
-                   <br>PROVIDE LEARNING OPPORTUNITY</br>
-                   <br>ON DEMAND SUPPORT</br> 
-                   <br>HELP EVERYONE TO GROW</br>
+                   <br>HELP EVERYONE TO LEARN & GROW</br>
+                   <br>WORKSHOPS AND MEETING SESSIONS</br> 
+                   <br>PROVIDE LEARNING & INTERNSHIP OPPORTUNITY</br>
+                   <br>EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</br> 
+                  
                   <a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Read More</a>
                 </div>
               </div>
@@ -978,6 +979,54 @@
       </div> 
     </section>
     <!-- Contact Section End -->
+
+     <!---- Community partner
+    ==================================== -->
+
+<section id="communityPartner" class="communityPartner">
+  <div class="container">
+  <div class="row mb50">
+  
+    <div class="sec-title text-center mb50 wow fadeInDown animated" data-wow-duration="500ms">
+      <h2>OUR COMMUNITY PARTNERS</h2>
+      <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
+    </div>
+    <div class="col-lg-4 col-md-3 col-sm-4 col-xs-12"></div>
+    <div class="communityPartner__box1 col-lg-4 col-md-3 col-sm-4 col-xs-12  wow fadeInLeft animated" data-wow-duration="500ms">
+      <div class="communityPartner__box2 ">
+        <a href="https://learnwith.community/" style="text-decoration: none;" target="_blank">
+          <img src="./assets/img/Partners/LWC.png" class="communityPartner__image " alt="">
+        </a>
+          </div>
+         <div class="communityPartner__box3 ">
+         <a href="https://gdsc.community.dev/kalindi-college-delhi/" style="text-decoration: none;" target="_blank">
+          <img src="./assets/img/Partners/GDSC_kalindi.jpg" class="communityPartner__image " alt="">
+         </a>
+      </div>
+      <div class="communityPartner__box3 ">
+        <a href="https://linktr.ee/cs_sattva" style="text-decoration: none;" target="_blank">
+         <img src="./assets/img/Partners/Sattva.jpg" class="communityPartner__image " alt="">
+        </a>
+     </div>
+     <div class="communityPartner__box3 ">
+      <a href="https://www.linkedin.com/company/algoderscommunity/" style="text-decoration: none;" target="_blank">
+       <img src="./assets/img/Partners/Algo.jpeg" class="communityPartner__image " alt="">
+      </a>
+   </div>
+   <div class="communityPartner__box3 ">
+    <a href="https://linktr.ee/SudansTech" style="text-decoration: none;" target="_blank">
+     <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image " alt="">
+    </a>
+  </div>
+    </div>
+     </div>
+  
+  
+  
+   <!--
+     End  Community partner
+      ==================================== -->
+  
 
     <!-- Footer Section Start -->
     <footer id="footer" class="footer-area section-padding">
