--- a/benefit.html
+++ b/benefit.html
@@ -65,30 +65,46 @@
   <div class="container">
   <div class="guide">
       <h3> Mentors Guide and Support</h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
+    If you are facing any problems during your learning period , then you can ask your queries directly to our mentors . You can reach them on Discord by using @Mentor Tag in your message in the server.<br>
+    Or Contact Supreme Mentors: <br>
+    Saurav Mukherjee<br>
+   
+    Discord : Saurav Mukherjee#4599
+    <a href=" https://www.linkedin.com/in/sauravmukherjee44"> LinkedIn </a>
+     
+    <br> Praveen kumar purushothaman
+    <br>Discord : Praveen#2938
+    <a href=" https://www.linkedin.com/in/praveentech"> LinkedIn </a>
+     
+
   </div>
   <div class="guide">
-    <h3> Mentors Guide and Support</h3>
+    <h3> Workshops and Meeting Sessions</h3>
+    In or community we organizes workshops and meeting sessions for the students to learn and interact with the mentors.
+</div>
+<div class="guide">
+    <h3>Provide Learning and Internship Oppurtunities</h3>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
 </div>
 <div class="guide">
-    <h3> Mentors Guide and Support</h3>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
-</div>
-<div class="guide">
-    <h3> Mentors Guide and Support</h3>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
-</div>
-<div class="guide">
-    <h3> Mentors Guide and Support</h3>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
-</div>
-<div class="guide">
-    <h3> Mentors Guide and Support</h3>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!
-</div>
+    <h3> Help Everyone to Learn and Grow</h3>
+    We want each and every member to grow , as community is with the people. We are always hereby present to help the people and other communities who are trying to make a positive contribution in in the technology .
+In the past , CodeIN Community came up with Spark-a-thon hackathon , in collaboration with SparkAR and Reskills , that encourages participation in the AR community. Spark-a-thon was a  success with total 600+ participants and our community with other collaborated communities was delighted to help so many participants during the hackathon in AR. We had provided many such other opportunies in the past which helped students not only to grab the knowledge of the topic but also to get their hands on the practical and live example along with the concept and will be providing in such opportunities in the coming future too.
+We are thankful for your constant support!!!
+And We are always here to help everyone grow !!!!
 
-  
+
+</div>
+<div class="guide">
+    <h3> Exposure to Students and Mentors around the World</h3>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde reprehenderit ab nesciunt cupiditate. Laudantium labore earum aliquam! Velit, reiciendis. Consequuntur!<br>
+</div>
+<br>
+<br>  
+
+<a href="#"><button type="button" class="btn pmd-btn-fab btn-danger pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
+<br>
+<br>
   
   </div>
   </body>
