--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
           <h4> How to Get Started With Programming?</h4>
           <p>Speaker : Amit Kumar Gupta (Founder Radobiz), Saurav Mukherjee (CodeIn Founder)</p>
           <p>Date of Event : 15/04/2021</p>
-          <a href="#" class="btn btn-danger">WATCH NOW</a>
+          <a href="#" class="btn btn-outline-danger">WATCH NOW</a>
         </div>
       </div>
 
@@ -800,7 +800,7 @@
           <h4>Get Started With AI, Ml And Data Science</h4>
           <p>Speaker : Deep Panchani (CodeIn Leader), Saurav Mukherjee (CodeIn Founder)</p>
           <p>Date of Event : 18/04/2021</p>
-          <a href="#" class="btn btn-danger">WATCH NOW</a>
+          <a href="#" class="btn btn-outline-danger">WATCH NOW</a>
         </div>
       </div>
     </div>
@@ -813,7 +813,7 @@
           <h4>Get Started With Machine Learning</h4>
           <p>Speaker : Saurav Mukherjee (CodeIn Founder)</p>
           <p>Date of Event : 21/09/2021</p>
-          <a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger">WATCH NOW</a>
+          <a href="https://youtu.be/lUSixxX9pK4" class="btn btn-outline-danger">WATCH NOW</a>
         </div>
       </div>
 
@@ -823,7 +823,7 @@
           <h4> Introduction to HACKTOBERFEST' 2021</h4>
           <p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, Microsoft)</p>
           <p>Date of Event : 11/10/2021</p>
-          <a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger">WATCH NOW</a>
+          <a href="https://youtu.be/fmDYVtInswU" class="btn btn-outline-danger">WATCH NOW</a>
         </div>
       </div>
     </div>
