--- a/index.html
+++ b/index.html
@@ -973,6 +973,11 @@
                 <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
               </a>
             </div>
+            <div class="community_box box5">
+              <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
+                <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
+              </a>
+            </div>
             
           </div>
   
