--- a/index.html
+++ b/index.html
@@ -785,43 +785,45 @@
 
       <div class="events_box_row">
       <div class="events_box">
-        <img src="./assets/img/Event/event1.png" class="events_img" alt="" />
+        <img src="./assets/img/Event/event1.jpeg" class="events_img" alt="" />
         <div class="content ">
-          <h4> How to Get Started With Programming?</h4>
-          <p>Speaker : Amit Kumar Gupta (Founder Radobiz), Saurav Mukherjee (CodeIn Founder)</p>
-          <p>Date of Event : 15/04/2021</p>
-          <a href="#" class="btn btn-danger">WATCH NOW</a>
+          <h4>Full Stack Development</h4>
+          <p>Speaker : Praveen Kumar Purushothaman (YouTuber), Ashtja Prasad (core team member)</p>
+          <p>Date of Event : 15/01/2022</p>
+          <a href="https://youtu.be/7aS6ru6Omts" class="btn btn-danger">WATCH NOW</a>
         </div>
       </div>
 
-      <div class="events_box">
-        <img src="./assets/img/Event/event2.png" class="events_img" alt="" />
-        <div class="content">
-          <h4>Get Started With AI, Ml And Data Science</h4>
-          <p>Speaker : Deep Panchani (CodeIn Leader), Saurav Mukherjee (CodeIn Founder)</p>
-          <p>Date of Event : 18/04/2021</p>
-          <a href="#" class="btn btn-danger">WATCH NOW</a>
-        </div>
-      </div>
-    </div>
-
+      
     <div class="events_box_row">
 
       <div class="events_box">
         <img src="./assets/img/Event/event3.png" class="events_img" alt="" />
         <div class="content">
           <h4>Get Started With Machine Learning</h4>
-          <p>Speaker : Saurav Mukherjee (CodeIn Founder)</p>
+          <p>Speaker : Saurav Mukherjee (Founder CodeIN Community)</p>
           <p>Date of Event : 21/09/2021</p>
           <a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger">WATCH NOW</a>
         </div>
       </div>
 
       <div class="events_box">
+        <img src="./assets/img/Event/event2.png" class="events_img" alt="" />
+        <div class="content">
+          <h4>Google CrowdSource Contributions</h4>
+          <p>Speaker : Sowmya V & Saurav Mukherjee (Google CrowdSource Influencer)</p>
+          <p>Date of Event : 30/12/2021</p>
+          <a href="#" class="btn btn-danger">NOT RECORDED</a>
+        </div>
+      </div>
+    </div>
+
+
+      <div class="events_box">
         <img src="./assets/img/Event/event4.jpeg" class="events_img" alt="" />
         <div class="content">
           <h4> Introduction to HACKTOBERFEST' 2021</h4>
-          <p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, Microsoft)</p>
+          <p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, YouTuber)</p>
           <p>Date of Event : 11/10/2021</p>
           <a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger">WATCH NOW</a>
         </div>
