--- a/index.html
+++ b/index.html
@@ -734,6 +734,27 @@
 
                     </div>
                   </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/amisha.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Amisha Pandey
+                        </h2>
+                        <h3> Event & Content Creation Team </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://www.linkedin.com/in/amishapandey/" target="_blank"><i
+                          class="fab fa-linkedin"></i></a>
+                    
+                      </div>
+
+                    </div>
+                  </div>
+                  
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="img-thumb">
