Added New Members

--- a/index.html
+++ b/index.html
@@ -777,6 +777,168 @@
                   </div>
 
 
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/chetan.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Mylapilli Chetan
+                        </h2>
+                        <h3> Community Management </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/Chetan50" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/mylapilli-chetan" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/mansi.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Mansi Mishra </h2>
+                        <h3> Event Management </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/0904-mansi" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/mansi-mishra-5435441b8/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/muskan.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Muskan Goyal </h2>
+                        <h3> Tech Team Member </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://www.linkedin.com/in/muskan---goyal" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/priyal.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Priyal Jain </h2>
+                        <h3> Community & Event Manager </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://www.github.com/priyaljain919" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/priyaljain919" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/raghav.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Raghav Arya </h2>
+                        <h3> Community & Event Manager </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://www.linkedin.com/in/raghavarya" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/shruti.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Shruti Arora </h2>
+                        <h3> Event Management </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/shrutiiaroraaa" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/shrutiiaroraaa" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/vaibhav.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Vaibhav Gupta </h2>
+                        <h3> Tech Team </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/vaibhavgupta2499" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/vaibhav-gupta-98b5671b0" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/shruti_khapure.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Shruti Kapure </h2>
+                        <h3> Content Creation </h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/ShrutiKapure" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href=" https://www.linkedin.com/in/shruti-kapure-a16043212" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/priyanshu.jpg" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Priyanshu Vaishnavi </h2>
+                        <h3> Tech Team</h3>
+                      </div>
+
+                      <div class="media-icons">
+                        <a href="https://github.com/priyanshu688" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/priyanshu-vaishnavi" target="_blank"><i class="fab fa-linkedin"></i></a>
+                      </div>
+
+                    </div>
+                  </div>
 
                 </div>
               </div>
