--- a/index.html
+++ b/index.html
@@ -1212,13 +1212,13 @@
   
           <div class="img_container">
             <div class="community_box box1">
-              <a href="https://learnwith.community/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/LWC.png" class="communityPartner__image" alt="">
+              <a href="" style="text-decoration: none;" target="_blank">
+                <img src="" class="communityPartner__image" alt="">
               </a>
             </div>
             <div class="community_box box2">
-              <a href="https://gdsc.community.dev/kalindi-college-delhi/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/GDSC_kalindi.jpg" class="communityPartner__image" alt="">
+              <a href="" style="text-decoration: none;" target="_blank">
+                <img src="" class="communityPartner__image" alt="">
               </a>
             </div>
           </div>
