--- a/benefit.html
+++ b/benefit.html
@@ -80,7 +80,9 @@
   </div>
   <div class="guide">
     <h3> Workshops and Meeting Sessions</h3>
-    In or community we organizes workshops and meeting sessions for the students to learn and interact with the mentors.
+    In or community we organizes workshops and meeting sessions for the students to learn and interact with the mentors. At CodeIn community, we organize various events on a regular basis. Generally, our events are related to the coding world. We collaborate with different communities from all over the world. We organize workshops on high demanding skills like Web Development, Augmented reality, etc. We also conduct meeting sessions for networking among students of various fields. 
+
+
 </div>
 <div class="guide">
     <h3>Provide Learning and Internship Oppurtunities</h3>
