--- a/benefit.html
+++ b/benefit.html
@@ -114,7 +114,7 @@
 <br>
 <br>  
 
-<a href="#"><button type="button" class="btn pmd-btn-fab btn-danger pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
+<a href="https://codeincommunity.bio.link/"><button type="button" class="btn pmd-btn-fab btn-danger pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
 <br>
 <br>
   
