--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 Workshops on different technologies. Together We aim to explore the untouched world of technology and
                 tremendous growth-making fields.</p>
               <div class="header-button">
-                <a href="https://discord.com/invite/hWwbgP4dz9" target="_blank" class="btn btn-common">Join Now</i></a>
+                <a href="https://codeincommunity.bio.link/" target="_blank" class="btn btn-common">Join Now</i></a>
                 <a href="#about" class="btn btn-outline-danger btn-common video-popup">Learn More</i></a>
               </div>
             </div>
@@ -485,7 +485,7 @@
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <div class="img-thumb">
-                        <img src="./assets/img/team/blank.jpg" alt="">
+                        <img src="./assets/img/team/Pavan.jpeg" alt="">
                       </div>
                       <div class="info">
                         <h2>Pavan Kumar Reddy Bhavanam
