--- a/index.html
+++ b/index.html
@@ -1261,14 +1261,14 @@
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <input type="text" placeholder="Subject" id="msg_subject" class="form-control" required
+                    <input type="text" placeholder="Subject" id="msg_subject" class="form-control" name="subject" required
                       data-error="Please enter your subject">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message" rows="7"
+                    <textarea class="form-control" id="message" placeholder="Your Message" name="message" rows="7"
                       data-error="Write your message" required></textarea>
                     <div class="help-block with-errors"></div>
                   </div>
