--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,38 @@
   </div>
 
   <!-- counter ends -->
+
+  <!---- Sponsors
+    ==================================== -->
+    <div class="community_partner">
+      <div class="container">
+        <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS</h1>
+        <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+      
+        <div class="imgbox wow fadeInLeft animated">
+  
+          <div class="img_container">
+            <div class="community_box box1">
+              <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
+                <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
+              </a>
+            </div>
+            <div class="community_box box2">
+              <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
+                <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
+              </a>
+            </div>
+          </div>
+
+          </div>
+  
+        </div>
+      </div>
+    </div>
+    <!--
+       End  Sponsors
+        ==================================== -->
+  
   
   <!---- Community partner
     ==================================== -->
@@ -1201,37 +1233,7 @@
     <!--
        End  Community partner
         ==================================== -->
-   <!---- Sponsors
-    ==================================== -->
-    <div class="community_partner">
-      <div class="container">
-        <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS</h1>
-        <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-      
-        <div class="imgbox wow fadeInLeft animated">
-  
-          <div class="img_container">
-            <div class="community_box box1">
-              <a href="" style="text-decoration: none;" target="_blank">
-                <img src="" class="communityPartner__image" alt="">
-              </a>
-            </div>
-            <div class="community_box box2">
-              <a href="" style="text-decoration: none;" target="_blank">
-                <img src="" class="communityPartner__image" alt="">
-              </a>
-            </div>
-          </div>
-
-          </div>
-  
-        </div>
-      </div>
-    </div>
-    <!--
-       End  Sponsors
-        ==================================== -->
-  
+   
 
   <!-- Contact Section Start -->
   <section id="contact" class="section-padding bg-gray">
