--- a/benefit.html
+++ b/benefit.html
@@ -69,7 +69,7 @@
      At CodeIn community, we organize various events on a regular basis. Generally, our events are related to the coding world. We collaborate with different communities from all over the world. We organize workshops on high demanding skills like Web Development, Augmented reality, etc. We also conduct meeting sessions for networking among students of various fields. 
    </div>
     <div class="guide">
-    <h3>Provide Learning and Internship Oppurtunities</h3>
+    <h3>Provide Learning and Internship Opportunities</h3>
   Our Community comes with different kinds of competitions from time to time. From hackathons to coding competitions we do it all. Through these competitions, the community members get the chance to work in different organizations and get internship opportunities too.  We have benefited hundreds of students from our competition and provided them learning opportunities.
    </div>
     
