--- a/benefit.html
+++ b/benefit.html
@@ -84,7 +84,7 @@
 
     </div>
     <div class="guide">
-    <h3> Previous Events at CodeIn Community </h3>
+    <h3> Previous Events at CodeIN Community </h3>
    CodeIN Community came up with the Spark-a-thon hackathon in collaboration with SparkAR and Re-Skills. This hackathon encouraged participation in the AR community. Spark-a-thon was a huge success with a total of 600+ participants. We have provided many such opportunities which helped students to grab knowledge of the topic and hands-on experience. Our events were based on practical and live examples. We also share information about ongoing events and swag opportunities. 
 
    </div>
