fixed btn hover style + fixed events btn position

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
         </div>
 
       </div>
-      <button class="btn btn-common opportunity_btn"><a href="" style="color: aliceblue;">View All</a>
+      <button class="btn btn-common opportunity_btn"><a href="" >View All</a>
       </button>
     </div>
   </section>
