fixed events card responsiveness + unused codes removed

--- a/index.html
+++ b/index.html
@@ -948,64 +948,64 @@
   <!-- events section starts -->
 
 
-  <div class="events" id="events">
-    <div class="container">
-    <div class="section-header text-center">
-      <h1 class="section-title wow fadeInDown mt-5" data-wow-delay="0.3s">Our <span> Events</span></h1>
-      <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-    </div>
-
-    <div class="events_container wow fadeInDown">
-
-      <div class="events_box_row">
-      <div class="events_box">
-        <img src="./assets/img/Event/event1.jpeg" class="events_img" alt="" />
-        <div class="content ">
-          <h4>Full Stack Development</h4>
-          <p>Speaker : Praveen Kumar Purushothaman (YouTuber), Ashtja Prasad (core team member)</p>
-          <p>Date of Event : 15/01/2022</p>
-          <a href="https://youtu.be/7aS6ru6Omts" class="btn btn-danger">WATCH NOW</a>
+<div class="events" id="events">
+    <div class="container" style="max-width: 94%;">
+        <div class="section-header text-center">
+            <h1 class="section-title wow fadeInDown mt-5" data-wow-delay="0.3s">Our <span> Events</span></h1>
+            <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
-      </div>
 
-      
-    <div class="events_box_row">
+        <div class="events_container wow fadeInDown">
 
-      <div class="events_box">
-        <img src="./assets/img/Event/event3.png" class="events_img" alt="" />
-        <div class="content">
-          <h4>Get Started With Machine Learning</h4>
-          <p>Speaker : Saurav Mukherjee (Founder CodeIN Community)</p>
-          <p>Date of Event : 21/09/2021</p>
-          <a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger">WATCH NOW</a>
+            <div class="events_box_row">
+                <div class="events_box">
+                    <img src="./assets/img/Event/event1.jpeg" class="events_img" alt="" />
+                    <div class="content ">
+                        <h4>Full Stack Development</h4>
+                        <p>Speaker : Praveen Kumar Purushothaman (YouTuber), Ashtja Prasad (core team member)</p>
+                        <p>Date of Event : 15/01/2022</p>
+                        <a href="https://youtu.be/7aS6ru6Omts" class="btn btn-danger">WATCH NOW</a>
+                    </div>
+                </div>
+
+
+
+
+                <div class="events_box">
+                    <img src="./assets/img/Event/event3.png" class="events_img" alt="" />
+                    <div class="content">
+                        <h4>Get Started With Machine Learning</h4>
+                        <p>Speaker : Saurav Mukherjee (Founder CodeIN Community)</p>
+                        <p>Date of Event : 21/09/2021</p>
+                        <a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger">WATCH NOW</a>
+                    </div>
+                </div>
+
+                <div class="events_box">
+                    <img src="./assets/img/Event/event2.png" class="events_img" alt="" />
+                    <div class="content">
+                        <h4>Google CrowdSource Contributions</h4>
+                        <p>Speaker : Sowmya V & Saurav Mukherjee (Google CrowdSource Influencer)</p>
+                        <p>Date of Event : 30/12/2021</p>
+                        <a href="#" class="btn btn-danger">NOT RECORDED</a>
+                    </div>
+                </div>
+
+
+
+                <div class="events_box">
+                    <img src="./assets/img/Event/event4.jpeg" class="events_img" alt="" />
+                    <div class="content">
+                        <h4> Introduction to HACKTOBERFEST' 2021</h4>
+                        <p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, YouTuber)</p>
+                        <p>Date of Event : 11/10/2021</p>
+                        <a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger">WATCH NOW</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <div class="events_box">
-        <img src="./assets/img/Event/event2.png" class="events_img" alt="" />
-        <div class="content">
-          <h4>Google CrowdSource Contributions</h4>
-          <p>Speaker : Sowmya V & Saurav Mukherjee (Google CrowdSource Influencer)</p>
-          <p>Date of Event : 30/12/2021</p>
-          <a href="#" class="btn btn-danger">NOT RECORDED</a>
-        </div>
-      </div>
     </div>
-
-
-      <div class="events_box">
-        <img src="./assets/img/Event/event4.jpeg" class="events_img" alt="" />
-        <div class="content">
-          <h4> Introduction to HACKTOBERFEST' 2021</h4>
-          <p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, YouTuber)</p>
-          <p>Date of Event : 11/10/2021</p>
-          <a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger">WATCH NOW</a>
-        </div>
-      </div>
-    </div>
-    </div>
-    </div>
-  </div>
+</div>
 
   <!--Events section end-------------------------->
 
